wip: working routing and styled components with twin macro

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,7 @@ services:
     image: mccutchen/go-httpbin
     ports:
       - 8080:8080
+  postgres:
+    image: timescale/timescaledb-ha:pg14-latest
+    ports:
+      - 5432:5432
