--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,25 @@ python = "^3.11"
 httpx = "^0.24.1"
 uvicorn = {extras = ["standard"], version = "^0.22.0"}
 rich = "^13.4.2"
+blacksheep = "^1.2.17"
+hypercorn = "^0.14.4"
+nanoid = "^2.0.0"
+asyncpg = "^0.28.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.3.3"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 120
+
+[tool.black]
+line-length = 120
+
+[tool.isort]
+line_length = 120
+py_version=311
