--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ asyncpg = "^0.28.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
+honcho = "^1.1.0"
 
 [build-system]
 requires = ["poetry-core"]
