--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ blacksheep = "^1.2.17"
 hypercorn = "^0.14.4"
 nanoid = "^2.0.0"
 asyncpg = "^0.28.0"
+structlog = "^23.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
