--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,14 @@ hypercorn = "^0.14.4"
 nanoid = "^2.0.0"
 asyncpg = "^0.28.0"
 structlog = "^23.1.0"
+anyio = "^3.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
 honcho = "^1.1.0"
+pytest = "^7.4.0"
+black = "^23.7.0"
 
 [build-system]
 requires = ["poetry-core"]
