--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ python = "^3.11"
 httpx = "^0.24.1"
 uvicorn = {extras = ["standard"], version = "^0.22.0"}
 rich = "^13.4.2"
-blacksheep = "^1.2.17"
+blacksheep = "^1.2.18"
 hypercorn = "^0.14.4"
 nanoid = "^2.0.0"
 asyncpg = "^0.28.0"
 structlog = "^23.1.0"
 anyio = "^3.7.1"
+rodi = ">=1.1.1,<1.2.0"
+svix-ksuid = "^0.6.2"
 
 
 [tool.poetry.group.dev.dependencies]
