--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,5 @@ services:
     image: timescale/timescaledb-ha:pg14-latest
     ports:
       - 5432:5432
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
