--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
     /* Bundler mode */
@@ -23,10 +19,7 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": "./src"
   },
-  "include": [
-    "src",
-    "types"
-  ],
+  "include": ["src", "types"],
   "references": [
     {
       "path": "./tsconfig.node.json"
