--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,14 @@ pytest = "^7.4.0"
 black = "^23.7.0"
 isort = "^5.12.0"
 
+
+[tool.poetry.group.doc.dependencies]
+sphinx = "^7.2.3"
+sphinx-design = "^0.5.0"
+furo = "^2023.8.19"
+sphinx-autobuild = "^2021.3.14"
+sphinxcontrib-jquery = "^4.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
