--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 httpx = "^0.24.1"
-uvicorn = {extras = ["standard"], version = "^0.22.0"}
+uvicorn = { extras = ["standard"], version = "^0.22.0" }
 rich = "^13.4.2"
 blacksheep = "^1.2.18"
 hypercorn = "^0.14.4"
@@ -19,8 +19,8 @@ anyio = "^3.7.1"
 rodi = ">=1.1.1,<1.2.0"
 svix-ksuid = "^0.6.2"
 python-ulid = "^1.1.0"
-essentials-configuration = {extras = ["full"], version = "^2.0.3"}
-sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
+essentials-configuration = { extras = ["full"], version = "^2.0.3" }
+sqlalchemy = { extras = ["asyncio"], version = "^2.0.20" }
 psycopg2-binary = "^2.9.7"
 sqlalchemy-utils = "^0.41.1"
 
@@ -52,4 +52,10 @@ line-length = 120
 
 [tool.isort]
 line_length = 120
-py_version=311
+py_version = 311
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore:Deprecated call to:DeprecationWarning",
+    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
+]
