--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "babel": {
+    "plugins": [
+      "recharts"
+    ]
+  },
   "babelMacros": {
     "twin": {
       "preset": "emotion"
@@ -19,39 +24,48 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
+    "@sentry/browser": "^7.66.0",
     "@tailwindcss/forms": "^0.5.6",
     "date-fns": "^2.30.0",
     "http-status-codes": "^2.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "mkui": "link:../vendors/mkui",
+    "prismjs": "^1.29.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-is": "16.13.1",
+    "react-error-boundary": "^4.0.11",
+    "react-is": "18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "recharts": "^2.8.0",
     "sort-by": "^1.2.0",
     "url-join": "^5.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
+    "@types/react-syntax-highlighter": "^15.5.7",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
     "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.28",
     "prettier": "^3.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "tailwindcss": "^3.3.3",
     "twin.macro": "^3.4.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vite-tsconfig-paths": "^4.2.0"
   }
