--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry]
 name = "harp"
 version = "0.1.0"
@@ -7,23 +11,21 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-httpx = "^0.24.1"
-uvicorn = { extras = ["standard"], version = "^0.22.0" }
-rich = "^13.4.2"
+anyio = "^3.7.1"
+asyncpg = "^0.28.0"
 blacksheep = "^1.2.18"
+essentials-configuration = { extras = ["full"], version = "^2.0.3" }
+httpx = "^0.24.1"
 hypercorn = "^0.14.4"
 nanoid = "^2.0.0"
-asyncpg = "^0.28.0"
-structlog = "^23.1.0"
-anyio = "^3.7.1"
-rodi = ">=1.1.1,<1.2.0"
-svix-ksuid = "^0.6.2"
-python-ulid = "^1.1.0"
-essentials-configuration = { extras = ["full"], version = "^2.0.3" }
-sqlalchemy = { extras = ["asyncio"], version = "^2.0.20" }
 psycopg2-binary = "^2.9.7"
+python-ulid = "^1.1.0"
+rich = "^13.4.2"
+rodi = ">=1.1.1,<1.2.0"
+sqlalchemy = { extras = ["asyncio"], version = "^2.0.20" }
 sqlalchemy-utils = "^0.41.1"
-
+structlog = "^23.1.0"
+svix-ksuid = "^0.6.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
@@ -32,7 +34,6 @@ pytest = "^7.4.0"
 black = "^23.7.0"
 isort = "^5.12.0"
 
-
 [tool.poetry.group.doc.dependencies]
 sphinx = "^7.2.3"
 sphinx-design = "^0.5.0"
@@ -40,9 +41,8 @@ furo = "^2023.8.19"
 sphinx-autobuild = "^2021.3.14"
 sphinxcontrib-jquery = "^4.1"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.scripts]
+harp = 'harp.cli:entrypoint'
 
 [tool.ruff]
 line-length = 120
