feat: implements simple get with end to end tests (#1, wip)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ sqlalchemy = { extras = ["asyncio"], version = "^2.0.20" }
 sqlalchemy-utils = "^0.41.1"
 structlog = "^23.1.0"
 svix-ksuid = "^0.6.2"
+asgiref = "^3.7.2"
+asgi-tools = "^0.76.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
@@ -33,6 +35,7 @@ honcho = "^1.1.0"
 pytest = "^7.4.0"
 black = "^23.7.0"
 isort = "^5.12.0"
+pytest-asyncio = "^0.21.1"
 
 [tool.poetry.group.doc.dependencies]
 sphinx = "^7.2.3"
