--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ variables:
 .DockerBuild: &DockerBuild
   image: docker:20
   stage: build
+  tags:
+    - gitlab-org-docker
   before_script:
     - apk add git make py3-pip py3-jinja2 bash
 
