--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pytest = "^7.4.0"
 black = "^23.7.0"
 isort = "^5.12.0"
 pytest-asyncio = "^0.21.1"
+watchfiles = "^0.21.0"
 
 [tool.poetry.group.doc.dependencies]
 sphinx = "^7.2.3"
