--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,9 @@ image: alpine:3.12
 
 stages:
   - build
+  - test
+  - artefacts
+  - release
 
 variables:
   DOCKER_BUILD: docker image build --pull
@@ -11,7 +14,10 @@ variables:
   GIT_FETCH_EXTRA_FLAGS: --tags
   GIT_STRATEGY: fetch
   GIT_SUBMODULE_STRATEGY: recursive
-  JOB_VERSION: ci-${CI_PIPELINE_IID}
+  DOCKER_TAGS: ${CI_COMMIT_SHORT_SHA}-${CI_PIPELINE_IID}
+  DOCKER_IMAGE: registry.gitlab.com/makersquad/oss/harp
+  DOCKER_IMAGE_DEV: registry.gitlab.com/makersquad/oss/harp
+  CI_REGISTRY_PASSWORD: ${CI_JOB_TOKEN}
 
 .DockerBuild: &DockerBuild
   image: docker:20
@@ -22,9 +28,80 @@ variables:
     - gitlab-org-docker
   before_script:
     - apk add git make py3-pip py3-jinja2 bash
+    - pip install 'poetry==1.7.1'
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
-build:
+build:runtime:
   <<: *DockerBuild
 
   script:
-    - bash bin/sandbox make build
+    - bash bin/sandbox make build push
+
+build:dev:
+  <<: *DockerBuild
+
+  variables:
+    DOCKER_TAGS_SUFFIX: -dev
+
+  script:
+    - bash bin/sandbox make build-dev push-dev
+
+test:
+  needs: ["build:dev"]
+  image: ${DOCKER_IMAGE}:${DOCKER_TAGS}-dev
+  stage: test
+  script:
+    - cd /opt/harp/src; make test
+
+doc:html:
+  needs: ["build:dev"]
+  image: ${DOCKER_IMAGE}:${DOCKER_TAGS}-dev
+  stage: artefacts
+  script:
+    - (cd /opt/harp/src/docs; make html)
+    - mv /opt/harp/src/docs/_build/html harp-doc
+  artifacts:
+    name: harp-doc
+    expire_in: 1 month
+    paths:
+      - "harp-doc/*"
+
+storybook:
+  needs: ["build:dev"]
+  image: ${DOCKER_IMAGE}:${DOCKER_TAGS}-dev
+  stage: artefacts
+  script:
+    - (cd /opt/harp/src/vendors/mkui; pnpm build)
+    - mv /opt/harp/src/vendors/mkui/build harp-ui
+  artifacts:
+    name: harp-ui
+    expire_in: 1 month
+    paths:
+      - "harp-ui/*"
+
+release:
+  image: docker:20
+  needs: ["build:runtime", "test"]
+  stage: release
+  only:
+    - main
+    - tags
+  services:
+    - docker:dind
+  variables:
+    SOURCE_IMAGE: registry.gitlab.com/makersquad/oss/harp:${DOCKER_TAGS}
+  before_script:
+    - apk add git make py3-pip py3-jinja2 bash
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker pull ${SOURCE_IMAGE}
+    - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD docker.io
+  script:
+    - test -n "$CI_COMMIT_BRANCH" && docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:git-$CI_COMMIT_BRANCH
+    - test -n "$CI_COMMIT_TAG" && docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:$CI_COMMIT_TAG
+    - test -n "$CI_COMMIT_TAG" && docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:latest
+    - docker push makersquad/harp-proxy --all-tags
+
+
+# test ui
+# build doc
+# build storybook
