--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ asgiref = "^3.7.2"
 asgi-tools = "^0.76.0"
 whistle = "^1.0.1"
 aiosqlite = "^0.19.0"
+http-router = "^4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
