--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "json-schema-to-typescript": "^13.1.1",
     "postcss": "^8.4.28",
     "prettier": "^3.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
