--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendors/rodi"]
 	path = vendors/rodi
 	url = git@github.com:msqd/rodi.git
+[submodule "vendors/whistle"]
+	path = vendors/whistle
+	url = git@github.com:msqd/whistle.git
