feat: missing dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ sqlalchemy-utils = "^0.41.1"
 structlog = "^23.1.0"
 svix-ksuid = "^0.6.2"
 dataclasses-json = "^0.6.3"
+dataclasses-jsonschema = "^2.16.0"
 
 [tool.poetry.dependencies.essentials-configuration]
 path = "./vendors/config"
