--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ variables:
   GIT_FETCH_EXTRA_FLAGS: --tags
   GIT_STRATEGY: fetch
   GIT_SUBMODULE_STRATEGY: recursive
+  GIT_SUBMODULE_FORCE_HTTPS: "true"
   DOCKER_TAGS: ${CI_COMMIT_SHORT_SHA}-${CI_PIPELINE_IID}
   DOCKER_IMAGE: registry.gitlab.com/makersquad/oss/harp
   DOCKER_IMAGE_DEV: registry.gitlab.com/makersquad/oss/harp
@@ -100,8 +101,6 @@ release:
     - test -n "$CI_COMMIT_TAG" && docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:$CI_COMMIT_TAG
     - test -n "$CI_COMMIT_TAG" && docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:latest
     - docker push makersquad/harp-proxy --all-tags
-
-
 # test ui
 # build doc
 # build storybook
