--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "vendors/config"]
 	path = vendors/config
-	url = git@github.com:msqd/config.git
+	url = https://github.com/msqd/config.git
 [submodule "vendors/rodi"]
 	path = vendors/rodi
-	url = git@github.com:msqd/rodi.git
+	url = https://github.com/msqd/rodi.git
 [submodule "vendors/whistle"]
 	path = vendors/whistle
-	url = git@github.com:msqd/whistle.git
+	url = https://github.com/msqd/whistle.git
