--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,6 +50,8 @@ test:
   needs: ["build:dev"]
   image: ${DOCKER_IMAGE}:${DOCKER_TAGS}-dev
   stage: test
+  variables:
+    GIT_STRATEGY: none
   script:
     - cd /opt/harp/src; make test
 
@@ -57,6 +59,8 @@ doc:html:
   needs: ["build:dev"]
   image: ${DOCKER_IMAGE}:${DOCKER_TAGS}-dev
   stage: artefacts
+  variables:
+    GIT_STRATEGY: none
   script:
     - (cd /opt/harp/src/docs; make html)
     - mv /opt/harp/src/docs/_build/html harp-doc
@@ -70,6 +74,8 @@ storybook:
   needs: ["build:dev"]
   image: ${DOCKER_IMAGE}:${DOCKER_TAGS}-dev
   stage: artefacts
+  variables:
+    GIT_STRATEGY: none
   script:
     - (cd /opt/harp/src/vendors/mkui; pnpm build)
     - mv /opt/harp/src/vendors/mkui/build harp-ui
