feat(cicd): fix pytest path

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ test:
   stage: test
   variables:
     GIT_STRATEGY: none
+    PYTEST: /opt/venv/bin/pytest
   script:
     - env | sort
     - cd /opt/harp/src; make test
