--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,8 +54,7 @@ test:
     GIT_STRATEGY: none
     PYTEST: /opt/venv/bin/pytest
   script:
-    - env | sort
-    - cd /opt/harp/src; make test
+    - (cd /opt/harp/src; make test)
 
 doc:html:
   needs: ["build:dev"]
@@ -63,6 +62,7 @@ doc:html:
   stage: artefacts
   variables:
     GIT_STRATEGY: none
+    SPHINXBUILD: /opt/venv/bin/sphinx-build
   script:
     - (cd /opt/harp/src/docs; make html)
     - mv /opt/harp/src/docs/_build/html harp-doc
@@ -93,6 +93,7 @@ release:
   stage: release
   only:
     - main
+    - dev
     - tags
   services:
     - docker:dind
