--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,6 +98,7 @@ release:
   services:
     - docker:dind
   variables:
+    GIT_STRATEGY: none
     SOURCE_IMAGE: registry.gitlab.com/makersquad/oss/harp:${DOCKER_TAGS}
   before_script:
     - apk add git make py3-pip py3-jinja2 bash
@@ -109,6 +110,6 @@ release:
     - test -n "$CI_COMMIT_TAG" && docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:$CI_COMMIT_TAG
     - test -n "$CI_COMMIT_TAG" && docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:latest
     - docker push makersquad/harp-proxy --all-tags
-# test ui
-# build doc
-# build storybook
+#
+# todo: test ui
+#
