--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+        exclude: misc
       - id: check-added-large-files
   - repo: https://github.com/PyCQA/isort
     rev: 5.12.0
