feat: update helm chart with config

--- a/misc/helm/charts/harp-proxy/templates/configmap.yaml
+++ b/misc/helm/charts/harp-proxy/templates/configmap.yaml
@@ -3,11 +3,11 @@ kind: ConfigMap
 metadata:
   name: {{ include "harp-proxy.fullname" . }}
 data:
-  harp.yaml:  |
+  harp.yaml: |
     proxy:
-      endpoint:
-        {{- range .Values.remotes }}
-        "{{ .containerPort }}":
+      endpoints:
+        {{- range .Values.endpoints }}
+        "{{ .port }}":
           name: "{{ .name }}"
-          target: "{{ .endpoint }}"
+          target: "{{ .url }}"
         {{- end }}
