feat: settings in chart

--- a/misc/helm/charts/harp-proxy/Chart.yaml
+++ b/misc/helm/charts/harp-proxy/Chart.yaml
@@ -4,3 +4,9 @@ description: HTTP API Runtime Proxy
 type: application
 version: 0.1.0
 appVersion: "1.16.0"
+
+dependencies:
+  - name: postgresql
+    version: 13.2.24
+    repository: https://charts.bitnami.com/bitnami
+    condition: postgresql.enabled
