--- a/misc/helm/charts/harp-proxy/values.yaml
+++ b/misc/helm/charts/harp-proxy/values.yaml
@@ -15,6 +15,19 @@ endpoints:
     port: "8080"
     url: https://httpbin.org/
 
+storage:
+  type: sqlalchemy
+  url: sqlite+aiosqlite:///data/harp.db
+  drop_tables: false
+  echo: false
+
+postgresql:
+  enabled: false
+  service:
+    ports:
+      postgresql: 5432
+
+
 imagePullSecrets: [ ]
 nameOverride: ""
 fullnameOverride: ""
@@ -34,8 +47,8 @@ podSecurityContext: { }
 # fsGroup: 2000
 
 securityContext: { }
-  # capabilities:
-  #   drop:
+# capabilities:
+#   drop:
 #   - ALL
 # readOnlyRootFilesystem: true
 # runAsNonRoot: true
@@ -64,10 +77,10 @@ ingress:
 resources: { }
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
+# resources, such as Minikube. If you do want to specify resources, uncomment the following
+# lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+# limits:
+#   cpu: 100m
 #   memory: 128Mi
 # requests:
 #   cpu: 100m
