--- a/misc/helm/charts/harp-proxy/Chart.yaml
+++ b/misc/helm/charts/harp-proxy/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: harp-proxy
 description: HTTP API Runtime Proxy
 type: application
-version: 0.1.0
-appVersion: "1.16.0"
+version: "0.1.0"
+appVersion: "0.2.0"
 
 dependencies:
   - name: postgresql
