--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
-services:
+volumes:
+  postgres_data: { }
 
+services:
   httpbin:
     image: mccutchen/go-httpbin
     ports:
@@ -11,3 +13,5 @@ services:
       - 5432:5432
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
