misc: dev experience, remove examples from python code, add examples in containers, bugfix on --set

--- a/misc/helm/charts/harp-proxy/templates/deployment.yaml
+++ b/misc/helm/charts/harp-proxy/templates/deployment.yaml
@@ -44,11 +44,11 @@ spec:
             {{- end }}
           livenessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
