feat: cleaning helm chart, requests ratings a bit less severe

--- a/misc/helm/charts/harp-proxy/templates/deployment.yaml
+++ b/misc/helm/charts/harp-proxy/templates/deployment.yaml
@@ -37,9 +37,9 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
-            {{- range .Values.remotes }}
+            {{- range .Values.endpoints }}
             - name: {{ .name }}
-              containerPort: {{ .containerPort }}
+              containerPort: {{ .port }}
               protocol: TCP
             {{- end }}
           livenessProbe:
