--- a/misc/helm/charts/harp-proxy/templates/ingress.yaml
+++ b/misc/helm/charts/harp-proxy/templates/ingress.yaml
@@ -49,7 +49,7 @@ spec:
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: {{ $fullName }}
+                name: {{ $fullName }}-dashboard
                 port:
                   number: {{ $svcPort }}
               {{- else }}
