--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ test:
     GIT_STRATEGY: none
     PYTEST: /opt/venv/bin/pytest
   script:
-    - (cd /opt/harp/src; make test)
+    - (cd /opt/harp/src; make test-all)
 
 doc:html:
   needs: [ "build:dev" ]
