--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dataclasses-jsonschema = "^2.16.0"
 asgimiddlewarestaticfile = "^0.6.0"
 aiohttp = "^3.9.1"
 multidict = "^6.0.4"
+passlib = "^1.7.4"
 
 [tool.poetry.dependencies.essentials-configuration]
 path = "./vendors/config"
