--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
+    "@types/node": "^20.10.5",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -59,6 +60,13 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^8.44.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-autofix": "^1.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-prettier": "^5.1.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "json-schema-to-typescript": "^13.1.1",
