--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,8 @@ watchfiles = "^0.21.0"
 dataclasses-jsonschema = "^2.16.0"
 pytest-benchmark = {extras = ["histogram"], version = "^4.0.0"}
 pytest-cov = "^4.1.0"
+sphinx-copybutton = "^0.5.2"
+sphinx-sitemap = "^2.5.1"
 
 [tool.poetry.scripts]
 harp = 'harp.cli:entrypoint'
