--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
     "test": "echo soon tm"
   },
@@ -27,7 +28,7 @@
     "@heroicons/react": "^2.0.18",
     "@sentry/browser": "^7.66.0",
     "@tailwindcss/forms": "^0.5.6",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.0.6",
     "http-status-codes": "^2.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -55,7 +56,7 @@
     "@types/react-syntax-highlighter": "^15.5.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.14",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-prismjs": "^2.1.0",
@@ -76,7 +77,7 @@
     "tailwindcss": "^3.3.3",
     "twin.macro": "^3.4.0",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9",
+    "vite": "^5.0.10",
     "vite-tsconfig-paths": "^4.2.0"
   }
 }
