chore(deps): upgrade backend dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,13 @@ readme = "README.rst"
 [tool.poetry.dependencies]
 python = "^3.11"
 aiosqlite = "^0.19.0"
-anyio = "^3.7.1"
+anyio = "^4.2.0"
 asgiref = "^3.7.2"
-asyncpg = "^0.28.0"
+asyncpg = "^0.29.0"
 http-router = "^4.0.0"
-httpx = "^0.24.1"
-hypercorn = "^0.14.4"
-nanoid = "^2.0.0"
+httpx = "^0.26.0"
+hypercorn = "^0.15.0"
 psycopg2-binary = "^2.9.9"
-python-ulid = "^1.1.0"
 rich = "^13.7.0"
 sqlalchemy = { extras = ["asyncio"], version = "^2.0.23" }
 sqlalchemy-utils = "^0.41.1"
@@ -54,7 +52,7 @@ honcho = "^1.1.0"
 isort = "^5.13.2"
 pre-commit = "^3.6.0"
 pytest = "^7.4.3"
-pytest-asyncio = "^0.21.1"
+pytest-asyncio = "^0.21.1" # 0.23 breaks the test suite (https://github.com/pytest-dev/pytest-asyncio/releases/tag/v0.23.0)
 respx = "^0.20.2"
 sphinx = "^7.2.6"
 sphinx-autobuild = "^2021.3.14"
@@ -62,7 +60,7 @@ sphinx-design = "^0.5.0"
 sphinxcontrib-jquery = "^4.1"
 watchfiles = "^0.21.0"
 dataclasses-jsonschema = "^2.16.0"
-pytest-benchmark = {extras = ["histogram"], version = "^4.0.0"}
+pytest-benchmark = { extras = ["histogram"], version = "^4.0.0" }
 pytest-cov = "^4.1.0"
 sphinx-copybutton = "^0.5.2"
 sphinx-sitemap = "^2.5.1"
