--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,25 +11,27 @@ readme = "README.rst"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+aiohttp = "^3.9.1"
 aiosqlite = "^0.19.0"
 anyio = "^4.2.0"
+asgimiddlewarestaticfile = "^0.6.0"
 asgiref = "^3.7.2"
 asyncpg = "^0.29.0"
+dataclasses-json = "^0.6.3"
+dataclasses-jsonschema = "^2.16.0"
+honcho = { version = "^1.1.0", optional = true }
 http-router = "^4.0.0"
 httpx = "^0.26.0"
 hypercorn = "^0.15.0"
-psycopg2-binary = "^2.9.9"
-rich = "^13.7.0"
-sqlalchemy = { extras = ["asyncio"], version = "^2.0.23" }
-sqlalchemy-utils = "^0.41.1"
-structlog = "^23.2.0"
-svix-ksuid = "^0.6.2"
-dataclasses-json = "^0.6.3"
-dataclasses-jsonschema = "^2.16.0"
-asgimiddlewarestaticfile = "^0.6.0"
-aiohttp = "^3.9.1"
 multidict = "^6.0.4"
 passlib = "^1.7.4"
+psycopg2-binary = "^2.9.9"
+rich = "^13.7.0"
+sqlalchemy = { extras = ["asyncio"], version = "^2.0.24" }
+sqlalchemy-utils = "^0.41.1"
+structlog = "^23.3.0"
+svix-ksuid = "^0.6.2"
+watchfiles = { version = "^0.21.0", optional = true }
 
 [tool.poetry.dependencies.essentials-configuration]
 path = "./vendors/config"
@@ -48,7 +50,6 @@ develop = true
 asgi-tools = "^0.76.0"
 black = "^23.12.0"
 furo = "^2023.9.10"
-honcho = "^1.1.0"
 isort = "^5.13.2"
 pre-commit = "^3.6.0"
 pytest = "^7.4.3"
@@ -58,8 +59,6 @@ sphinx = "^7.2.6"
 sphinx-autobuild = "^2021.3.14"
 sphinx-design = "^0.5.0"
 sphinxcontrib-jquery = "^4.1"
-watchfiles = "^0.21.0"
-dataclasses-jsonschema = "^2.16.0"
 pytest-benchmark = { extras = ["histogram"], version = "^4.0.0" }
 pytest-cov = "^4.1.0"
 sphinx-copybutton = "^0.5.2"
@@ -67,6 +66,9 @@ sphinx-sitemap = "^2.5.1"
 
 [tool.poetry.scripts]
 harp = 'harp.cli:entrypoint'
+
+[tool.poetry.extras]
+dev = ['honcho', 'watchfiles']
 
 [tool.ruff]
 line-length = 120
