--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ pytest-benchmark = { extras = ["histogram"], version = "^4.0.0" }
 pytest-cov = "^4.1.0"
 sphinx-copybutton = "^0.5.2"
 sphinx-sitemap = "^2.5.1"
+ruff = "^0.1.9"
 
 [tool.poetry.scripts]
 harp = 'harp.cli:entrypoint'
