--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@headlessui/react": "^1.7.17",
+    "@headlessui/react": "1.7.17",
     "@heroicons/react": "^2.1.1",
     "@sentry/browser": "^7.91.0",
     "@tailwindcss/forms": "^0.5.7",
