--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ structlog = "^23.3.0"
 svix-ksuid = "^0.6.2"
 watchfiles = { version = "^0.21.0", optional = true }
 orjson = "^3.9.10"
+granian = "^0.7.3"
 
 [tool.poetry.dependencies.essentials-configuration]
 path = "./vendors/config"
