feat: update helm chart to reflect configuration format changes

--- a/misc/helm/charts/harp-proxy/templates/configmap.yaml
+++ b/misc/helm/charts/harp-proxy/templates/configmap.yaml
@@ -7,7 +7,7 @@ data:
     proxy:
       endpoints:
         {{- range .Values.endpoints }}
-        "{{ .port }}":
+        - port: "{{ .port }}"
           name: "{{ .name }}"
           url: "{{ .url }}"
         {{- end }}
