--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ pytest-cov = "^4.1.0"
 sphinx-copybutton = "^0.5.2"
 sphinx-sitemap = "^2.5.1"
 ruff = "^0.1.9"
+pytest-xdist = {version = "^3.5.0", extras = ["psutil"]}
 
 [tool.poetry.scripts]
 harp = 'harp.commandline:entrypoint'
