chore(cicd): add ability to add options to pytest, disable e2e tests on ci (for now)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,7 @@ test:
   variables:
     GIT_STRATEGY: none
     PYTEST: /opt/venv/bin/pytest
+    PYTEST_OPTIONS: "-m 'not subprocess'"
   script:
     - (cd /opt/harp/src; poetry run make test)
 
