--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ svix-ksuid = "^0.6.2"
 watchfiles = { version = "^0.21.0", optional = true }
 orjson = "^3.9.10"
 hishel = "^0.0.21"
+sentry-sdk = "^1.39.2"
 
 [tool.poetry.dependencies.essentials-configuration]
 path = "./vendors/config"
