--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,3 +94,6 @@ filterwarnings = [
     "ignore:Deprecated call to:DeprecationWarning",
     "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
 ]
+markers = [
+    "subprocess"
+]
