--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ sphinx-copybutton = "^0.5.2"
 sphinx-sitemap = "^2.5.1"
 ruff = "^0.1.9"
 pytest-xdist = {version = "^3.5.0", extras = ["psutil"]}
+freezegun = "^1.4.0"
 
 [tool.poetry.scripts]
 harp = 'harp.commandline:entrypoint'
