--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,22 @@ sphinx-sitemap = "^2.5.1"
 ruff = "^0.1.9"
 pytest-xdist = {version = "^3.5.0", extras = ["psutil"]}
 freezegun = "^1.4.0"
+testcontainers = {extras = ["postgres"], version = "^3.7.1"}
+
+
+[tool.poetry.group.mysql.dependencies]
+asyncmy = "^0.2.9"
+aiomysql = "^0.2.0"
+cryptography = "^41.0.7"
+
+
+[tool.poetry.group.postgresql.dependencies]
+aiopg = "^1.4.0"
+
+
+[tool.poetry.group.mssql.dependencies]
+aioodbc = "^0.5.0"
+pymssql = "^2.2.11"
 
 [tool.poetry.scripts]
 harp = 'harp.commandline:entrypoint'
