feat: attempt to use devcontainers in tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,10 +50,14 @@ test:
   needs: [ "build:dev" ]
   image: ${DOCKER_IMAGE}:${DOCKER_TAGS}-dev
   stage: test
+  services:
+    - docker:24.0.6-dind
   variables:
     GIT_STRATEGY: none
     PYTEST: /opt/venv/bin/pytest
     PYTEST_OPTIONS: "-m 'not subprocess'"
+  before_script:
+    - apk add --update docker
   script:
     - (cd /opt/harp/src; poetry run make test)
 
