--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -40,11 +40,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
-          cache: poetry
  
       - name: Install dependencies
         run: |
-          pip install poetry
+          pipx install poetry
           poetry install
           
       - name: Build Sphinx Documentation
