--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+          fetch-tags: true
       
       - name: Install poetry
         run: pipx install poetry
