--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -57,6 +57,14 @@ jobs:
         with:
           path: 'docs/_build/html'
           
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      #- name: Deploy to GitHub Pages
+      #  id: deployment
+      #  uses: actions/deploy-pages@v4
+      
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: 'docs/_build/html'
+          destination_dir: '${GITHUB_REF##*/}'
+          
