--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,9 +1,8 @@
 name: Deploy sphinx documentation Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main", "dev"]
+    branches: ["dev"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -57,14 +56,7 @@ jobs:
         with:
           path: 'docs/_build/html'
           
-      #- name: Deploy to GitHub Pages
-      #  id: deployment
-      #  uses: actions/deploy-pages@v4
-      
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: 'docs/_build/html'
-          destination_dir: '${GITHUB_REF##*/}'
-          
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
