--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -46,7 +46,9 @@ jobs:
  
       - run: poetry install
           
-      - run: poetry run make -C docs html
+      - run:  |
+          poetry run make -C docs html
+          echo "google-site-verification: google72e937875c790d13.html" > docs/_build/html/google72e937875c790d13.html
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
