--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ orjson = "^3.9.10"
 hishel = "^0.0.21"
 sentry-sdk = "^1.39.2"
 networkx = "^3.2.1"
-bokeh = "^3.3.3"
+bokeh = "3.3.3" # careful, this should be same version as frontend
 
 [tool.poetry.dependencies.essentials-configuration]
 path = "./vendors/config"
