test: first test using vitest

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,8 +25,8 @@
   },
   "include": [
     "src",
-    "types"
-  ],
+    "types",
+ "vitest.setup.ts"  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
