--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "babelMacros": {
     "twin": {
@@ -46,6 +46,7 @@
     "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^20.11.16",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.45",
@@ -69,8 +70,10 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^24.0.0",
     "json-schema-to-typescript": "^13.1.2",
+    "msw": "^2.1.7",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
+    "react-test-renderer": "^18.2.0",
     "resize-observer-polyfill": "^1.5.1",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.1",
