--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,9 +45,10 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
+    "@playwright/test": "^1.41.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.11.17",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
