--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "test:unit": "vitest run",
     "test:browser": "playwright test",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test": "pnpm run test:unit && pnpm run test:browser"
   },
   "babelMacros": {
     "twin": {
