--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^24.0.0",
     "json-schema-to-typescript": "^13.1.2",
