--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ build:dev:
   script:
     - bash bin/sandbox make build-dev push-dev
 
-test:
+test:backend:
   needs: [ "build:dev" ]
   image: ${DOCKER_IMAGE}:${DOCKER_TAGS}-dev
   stage: test
@@ -57,7 +57,18 @@ test:
     PYTEST: /opt/venv/bin/pytest
     PYTEST_OPTIONS: "-m 'not subprocess'"
   script:
-    - (cd /opt/harp/src; poetry run make test)
+    - (cd /opt/harp/src; poetry run make test-backend)
+
+test:frontend:
+  needs: [ "build:dev" ]
+  image: ${DOCKER_IMAGE}:${DOCKER_TAGS}-dev
+  stage: test
+  services:
+    - docker:24.0.6-dind
+  variables:
+    GIT_STRATEGY: none
+  script:
+    - (cd /opt/harp/src/frontend; pnpm test:unit)
 
 doc:html:
   needs: [ "build:dev" ]
@@ -92,7 +103,7 @@ storybook:
 
 release:
   image: docker:24.0.6
-  needs: [ "build:runtime", "test" ]
+  needs: [ "build:runtime", "test:backend", "test:frontend" ]
   stage: release
   only:
     - main
