--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
     "test:unit": "vitest run",
+    "test:unit:update": "vitest run --update",
     "test:browser": "playwright test",
     "test:coverage": "vitest run --coverage",
     "test": "pnpm run test:unit && pnpm run test:browser"
