--- a/harp_apps/dashboard/frontend/package.json
+++ b/harp_apps/dashboard/frontend/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-
     "ui:build": "ladle build",
     "ui:preview": "ladle build && pnpm ui:serve:prod",
     "ui:serve:prod": "ladle preview -p 61110",
@@ -15,7 +14,6 @@
     "test:ui:dev": "cross-env TYPE=dev pnpm exec playwright test -c src/ui/playwright.config.ts",
     "test:ui:prod": "cross-env TYPE=prod pnpm exec playwright test -c src/ui/playwright.config.ts",
     "test:ui:update": "cross-env TYPE=update pnpm exec playwright test -c src/ui/playwright.config.ts -u",
-
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
@@ -32,14 +30,14 @@
   },
   "dependencies": {
     "@bramus/pagination-sequence": "^1.2.1",
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "1.7.17",
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "^2.1.3",
     "@ladle/react": "^4.0.3",
     "@sentry/browser": "^7.108.0",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.12",
     "date-fns": "^3.6.0",
     "http-status-codes": "^2.3.0",
     "localforage": "^1.10.0",
@@ -62,19 +60,19 @@
     "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
     "@playwright/test": "^1.42.1",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/react": "^14.2.2",
     "@types/bramus__pagination-sequence": "^1.2.2",
     "@types/node": "^20.11.30",
     "@types/prismjs": "^1.26.3",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.22",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@types/sync-fetch": "^0.4.3",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.2.2",
-    "autoprefixer": "^10.4.16",
+    "@vitest/coverage-v8": "^1.4.0",
+    "autoprefixer": "^10.4.19",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-prismjs": "^2.1.0",
     "cross-env": "^7.0.3",
@@ -90,18 +88,18 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.0.0",
     "json-schema-to-typescript": "^13.1.2",
-    "msw": "^2.2.9",
-    "postcss": "^8.4.32",
+    "msw": "^2.2.13",
+    "postcss": "^8.4.38",
     "prettier": "^3.1.1",
     "react-test-renderer": "^18.2.0",
     "resize-observer-polyfill": "^1.5.1",
     "rollup-plugin-visualizer": "^5.12.0",
     "sync-fetch": "^0.5.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "twin.macro": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.10",
+    "typescript": "5.4.3",
+    "vite": "^5.2.6",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.2.2"
+    "vitest": "^1.4.0"
   }
 }
