feat: implements dashboard overview and apdex computations

--- a/harp_apps/dashboard/frontend/package.json
+++ b/harp_apps/dashboard/frontend/package.json
@@ -47,9 +47,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-google-charts": "^4.0.1",
     "react-is": "18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
+    "react-sparklines": "^1.7.0",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.3",
     "sort-by": "^1.2.0",
@@ -66,6 +68,7 @@
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
+    "@types/react-sparklines": "^1.7.5",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@types/sync-fetch": "^0.4.3",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
