docs: update httpclient settings docs

--- a/docs/apps/http_client/examples/http_client_settings.yml
+++ b/docs/apps/http_client/examples/http_client_settings.yml
@@ -1,7 +1,7 @@
 http_client:
   timeout: 10.0
   cache:
-    disabled: false
+    enabled: true
     controller:
       allow_stale: true
       allow_heuristics: true
