--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,12 @@ exclude = ["**/node_modules/", "harp_apps/dashboard/frontend", ]
 python = "^3.12"
 aiohttp = "^3.9.5"
 aiosqlite = ">=0.19,<0.21"
+alembic = "^1.13.1"
 anyio = "^4.4.0"
 asgimiddlewarestaticfile = "^0.6.0"
 asgiref = "^3.8.1"
 asyncpg = "^0.29.0"
-dataclasses-json = "^0.6.3"
+dataclasses-json = "^0.6.7"
 dataclasses-jsonschema = "^2.16.0"
 essentials-configuration = "^2.0.4"
 hishel = ">=0.0.21,<0.0.28"
@@ -31,12 +32,12 @@ http-router = "^4.1.2"
 httpx = ">=0.26,<0.28"
 hypercorn = "^0.17.2"
 multidict = "^6.0.5"
-orjson = "^3.10.3"
+orjson = "^3.10.4"
 passlib = "^1.7.4"
 psycopg2-binary = "^2.9.9"
 pyyaml = "^6.0.1"
 rich = "^13.7.1"
-rich-click = "^1.8.2"
+rich-click = "^1.8.3"
 rodi = "^2.0.6"
 sentry-sdk = "^2.4.0"
 sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
@@ -45,6 +46,7 @@ structlog = "^24.2.0"
 svix-ksuid = "^0.6.2"
 watchfiles = { version = "^0.22.0", optional = true }
 whistle = { version = "2.0.0b1", allow-prereleases = true }
+pyheck = "^0.1.5"
 
 
 [tool.poetry.group.dev.dependencies]
