feat: initial echarts implementation for graphs

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@
 /benchmark_*.svg
 /frontend/stats.html
 /harp.db
+/harp_apps/dashboard/frontend/stats.html
 /misc/secrets
 /requirements*.txt
 /site
