--- a/harp_apps/dashboard/frontend/package.json
+++ b/harp_apps/dashboard/frontend/package.json
@@ -42,6 +42,8 @@
     "@types/lodash": "^4.17.5",
     "@types/react-helmet": "^6.1.11",
     "date-fns": "^3.6.0",
+    "echarts": "^5.5.0",
+    "echarts-for-react": "^3.0.2",
     "http-status-codes": "^2.3.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
@@ -55,9 +57,7 @@
     "react-is": "18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
-    "react-sparklines": "^1.7.0",
     "react-syntax-highlighter": "^15.5.0",
-    "recharts": "^2.12.7",
     "sort-by": "^1.2.0",
     "url-join": "^5.0.0"
   },
@@ -107,6 +107,7 @@
     "typescript": "5.4.3",
     "vite": "^5.3.1",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "vitest-canvas-mock": "^0.3.3"
   }
 }
